--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -1,7 +1,8 @@
 /*map*/
 #googleMap {
     width: 100%;
-    height: auto;
+    /* height: auto; */
+    height: 80vh;
     margin: 10px auto;
   }
 
