--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -206,3 +206,10 @@ button {
     border-top: 1px solid #c4c4c4;
 }
   
+
+.request-div{
+    border: 1px solid black;
+    border-radius: 30px;
+    width: 500px;
+    text-align: center;
+}
