--- a/css/delivery_request_seeker/delivery_request_driver.css
+++ b/css/delivery_request_seeker/delivery_request_driver.css
@@ -108,4 +108,6 @@ button {
     border: 1px solid black;
     border-radius: 30px;
     text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
