Made navigation responsive

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,17 @@ img {
     width: 100%;
 }
 
+
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
 /* =================== Typography ======================*/
 
 h1,
@@ -148,3 +159,4 @@ h6 {
 p {
     margin: 0;
 }
+
