--- a/css/templates/header.css
+++ b/css/templates/header.css
@@ -3,31 +3,127 @@ header {
     top: 0;
     width: 100%;
     padding: .5rem 1rem;
-    background-color: #06a367;
+    background-color: var(--color-primary);
     z-index: 1;
 
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 2rem;
 }
 
-nav li a {
+.logo img {
+    max-height: 30px;
+}
+
+.menu-main li a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.481);
+    color: var(--color-contrast-white);
     padding: 1rem;
     font-size: .9rem;
 }
 
-nav ul li:nth-child(1) a {
+.menu-main ul li:nth-child(1) a {
     color: white;
 }
 
-nav ul {
+.menu-main ul {
     padding: 0;
     list-style: none;
     display: flex;
 }
 
-.logo img {
-    max-height: 30px;
+nav ul {
+    padding: 0;
+}
+
+nav li {
+    list-style: none;
+    text-align: center;
+}
+
+/* ============ Mobile Menu =============== */
+
+nav.menu-mobile {
+    background-color: var(--color-primary);
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 3rem;
+    bottom: 0;
+    z-index: 1;
+
+    display: grid;
+    align-items: center;
+
+    transform: translateX(100%);
+    transition: all 1s ease-in-out;
+}
+
+.menu-mobile-active nav.menu-mobile {
+    transform: translateX(0);
+}
+
+.menu-mobile-active nav.menu-mobile ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-mobile-active nav.menu-mobile li {
+    text-align: center;
+    list-style: none;
+}
+
+nav.menu-mobile a,
+nav.menu-mobile a:visited,
+.menu-mobile-active nav.menu-mobile a,
+.menu-mobile-active nav.menu-mobile a:visited {
+    color: var(--color-contrast-white);
+    text-decoration: none;
+    display: block;
+    border-bottom: var(--line) var(--color-contrast-white);
+    margin: 0 3%;
+    padding-top: .5rem;
+    padding-bottom: .25rem;
+}
+
+/* ====================== */
+
+.hamburger {
+    background-color: transparent;
+    border: none;
+    color: var(--color-contrast-white);
+}
+
+@media screen and (max-width: 600px) {
+
+    .visually-hidden-text {
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+    }
+
+}
+
+@media screen and (min-width: 600px) {
+    
+    header {
+        justify-content: flex-start;
+    }
+
+    .visually-hidden-hamburger {
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+    }
+
 }
