--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -1,30 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>header</title>
 
     <link rel="stylesheet" href="./../../css/normalize.css">
+
     <link rel="stylesheet" href="./../../css/style.css">
+
     <link rel="stylesheet" href="./../../css/templates/header.css">
 
+    <link rel="stylesheet" href="./../../css/templates/.css">
+
+    <script src="https://kit.fontawesome.com/f9397e162d.js" crossorigin="anonymous"></script>
+
+    <script src="./../../js/template/navigation" defer></script>
+
 </head>
+
 <body>
 
     <header>
         <div class="logo">
             <img src="./../../img/Favio.png" alt="Favio">
         </div>
-        <nav>
+
+        <nav class="menu-main">
             <ul>
-                <li><a href="./../delivery_request_seeker/delivery_inprogress_rider.html">Home</a></li>
-                <li><a href="./../history/history.html">History</a></li>
-                <li><a href="../about_us/about_us.html">About Us</a></li>
-                <li><a href="">Settings</a></li>
+                <li>
+                    <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                        <span class="visually-hidden-text">Home</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="./../history/history.html">
+                        <span class="visually-hidden-text">History</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="../about_us/about_us.html">
+                        <span class="visually-hidden-text">About Us</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <span class="visually-hidden-text">Settings</span>
+                    </a>
+                </li>
+
+                <button class="hamburger visually-hidden-hamburger">
+                    <span class="fas fa-bars"></span>
+                </button>
             </ul>
         </nav>
     </header>
-    
+
+    <nav class="menu-mobile">
+        <ul>
+            <li><a href="./../delivery_request_seeker/delivery_inprogress_rider.html">Home</a></li>
+            <li><a href="./../history/history.html">History</a></li>
+            <li><a href="../about_us/about_us.html">About Us</a></li>
+            <li><a href="">Settings</a></li>
+        </ul>
+    </nav>
+
 </body>
+
 </html>
