--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -6,7 +6,7 @@
 }
 
 .favio_settingsMainDiv ul{
-    width:30vw;
+    width:60vw;
 }
 .favio_settingsMainDiv li {
     list-style: none;
@@ -19,4 +19,12 @@
 }
 a{
     text-decoration: none;
+}
+
+@media only screen and (min-width: 600px) {
+    .fa-solid fa-arrow-right{
+        display: none;
+        
+    }
+ 
 }
