--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -46,7 +46,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../settings/settings.html">
                         <span class="visually-hidden-text">Settings</span>
                     </a>
                 </li>
