--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -2,34 +2,13 @@
 #googleMap {
     width: 100%;
     /* height: auto; */
-    height: 80vh;
-    margin: 10px auto;
-}
-
-* {
-    box-sizing: border-box;
+    height: 100vh;
 }
 
 body {
     height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    line-height: 1.5;
-    background-color: #eeeeee;
 }
 
-header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    padding: .5rem 1rem;
-    background-color: #06a367;
-    z-index: 1;
-
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-}
 
 .map {
     position: fixed;
@@ -46,35 +25,14 @@ iframe {
     height: 100vh;
 }
 
-nav li a {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.481);
-    padding: 1rem;
-    font-size: .9rem;
-}
-
-nav ul li:nth-child(1) a {
-    color: white;
-}
-
-nav ul {
-    padding: 0;
-    list-style: none;
-    display: flex;
-}
-
-.logo img {
-    max-height: 30px;
-}
-
-
 
 .form-destination div input {
     width: 100%;
-    padding: 1.3rem 1rem;
+    padding: 1rem;
     border: none;
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: var(--border-radius);
+    margin-bottom: .5rem;
 }
 
 .form-destination .form-food {
@@ -88,35 +46,35 @@ nav ul {
 .form-destination>div {
     margin-top: 1rem;
     background-color: white;
-    border: 1px solid #c4c4c4;
-    border-radius: 20px;
+    border: 1px solid var(--color-contrast-light);
+    border-radius: var(--border-radius);
     overflow: hidden;
-    padding: 1rem .5;
+    padding: .2rem;
 }
 
 .main-content {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: hidden;
 }
 
 .form-fillup {
-    width: 50%;
     padding: 1rem;
+    height: 100vh;
 
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     gap: 2rem;
+    overflow: scroll;
 }
 
 h2 {
     margin: 0;
 }
 
-a {
-    text-decoration: none;
-}
 
 .form-courier-options a {
-    color: #222222;
+    color: var(--color-contrast-dark);
 }
 
 .form-courier-options h3 {
@@ -176,21 +134,21 @@ a {
 .options:hover {
     filter: grayscale(0);
     background-color: rgb(239, 239, 239);
-    border: 2px solid #222222;
+    border: 2px solid var(--color-contrast-dark);
     opacity: 100%;
 }
 
 .options:hover a {
-    color: #222222;
+    color: var(--color-contrast-dark);
 }
 
 
-button {
+.submit {
     /* margin-top: 1rem; */
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     font-weight: bold;
     padding: 1rem;
-    background-color: #222222;
+    background-color: var(--color-contrast-dark);
     border: none;
     color: white;
     width: 100%;
@@ -200,7 +158,6 @@ button {
     /* position: fixed; */
     bottom: 0;
     left: 0;
-    width: 50%;
     padding: 2rem;
     background-color: white;
     border-top: 1px solid #c4c4c4;
@@ -213,3 +170,10 @@ button {
     width: 500px;
     text-align: center;
 }
+
+
+
+
+
+/* ============================ */
+
