--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,10 @@ h4 {
 }
 
 h5 {
-    font-size: var(--typography-size-subtitle);
+    font-size: var(--typography-size-hero);
 }
 
 h6 {
     font-size: var(--typography-size-small);
+    font-weight: 400;
 }
