--- a/css/templates/header.css
+++ b/css/templates/header.css
@@ -111,7 +111,7 @@ nav.menu-mobile a:visited,
 }
 
 @media screen and (min-width: 600px) {
-    
+
     header {
         justify-content: flex-start;
     }
@@ -126,4 +126,65 @@ nav.menu-mobile a:visited,
         width: 1px;
     }
 
+}
+
+
+
+
+
+
+/* ========================= */
+
+
+input[type="radio"] {
+    display: none;
+}
+
+label img {
+    max-height: 100px;
+}
+
+label {
+    position: relative;
+    color: var(--color-contrast-dark);
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    gap: 3rem;
+    border: 1px solid var(--color-contrast-grey);
+    padding: .5em;
+    border-radius: var(--border-radius);
+    width: 100%;
+    justify-content: center;
+}
+
+
+
+input[type="radio"]:checked+label:before {
+    height: 1em;
+    width: 1em;
+    background-color: var(--color-contrast-white);
+}
+
+input[type="radio"]:checked+label {
+    box-shadow: 0px 0px 0px 2px var(--color-contrast-dark);
+}
+
+.user-type {
+    padding: 1rem;
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
+}
+
+.panel-content {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: .25rem;
+}
+
+.panel-body {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: .3rem;
 }
