--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -22,7 +22,8 @@
 
     <header>
         <div class="logo">
-            <img src="./../../img/Favio.png" alt="Favio">
+            <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                <img src="./../../img/Favio.png" alt="Favio"></a>
         </div>
 
         <nav class="menu-main">
@@ -70,6 +71,79 @@
     <h1>H1 Hello</h1>
     <h2>H2 Hello</h2>
     <h3>Hello</h3>
+
+    <!-- <div class="form-courier-options">
+        <input type="radio" id="radioBikes or Scooters" name="courier-option-radio"
+            value="Bikes or Scooters">
+
+            <label for="radioBikes or Scooters">Bikes or Scooters</label>
+
+        <div class="courier-icon"><img src="./../../img/bike.svg" alt="Bikes or Scooters-img"></div>
+        <div class="form-option">
+            <div class="courier-info">
+                <p>0kg - 5kg <br> 40 X 40 X 40 Centimeters</p>
+                <p>Cheapest and most sustainable delivery option: earn points every time you use sustainable delivery.
+                </p>
+            </div>
+        </div>
+    </div> -->
+
+
+    <div class="user-type">
+        <input type="radio" id="driver-no" name="driver" value="no" required checked="checked" />
+        <label for="driver-no">
+
+            <div class="courier-icon">
+                <img src="./../../img/bike.svg" alt="Bikes or Scooters-img">
+            </div>
+
+
+            <div class="panel-content">
+                <div class="panel-heading">
+                    <h5>Bikes or Scooters</h5>
+                </div>
+                <div class="panel-body">
+                    <h6>
+                        0kg - 5kg
+                    </h6>
+                    <h6>
+                        40 X 40 X 40 Centimeters
+                    </h6>
+                    <h6>
+                        Cheapest and most sustainable delivery option: earn points every time you use sustainable delivery.
+                    </h6>
+                </div>
+            </div>
+
+        </label>
+
+        <input type="radio" id="driver-yes" name="driver" value="yes" required>
+        <label for="driver-yes">
+
+            <div class="courier-icon">
+                <img src="./../../img/bike.svg" alt="Bikes or Scooters-img">
+            </div>
+
+
+            <div class="panel-content">
+                <div class="panel-heading">
+                    <h5>Bikes or Scooters</h5>
+                </div>
+                <div class="panel-body">
+                    <h6>
+                        0kg - 5kg
+                    </h6>
+                    <h6>
+                        40 X 40 X 40 Centimeters
+                    </h6>
+                    <h6>
+                        Cheapest and most sustainable delivery option: earn points every time you use sustainable delivery.
+                    </h6>
+                </div>
+            </div>
+
+        </label>
+    </div>
 
 </body>
 
