Styled Dropoff and and Datetime. Try to relayout cards for courier options

--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -79,6 +79,7 @@
             <label for="radioBikes or Scooters">Bikes or Scooters</label>
 
         <div class="courier-icon"><img src="./../../img/bike.svg" alt="Bikes or Scooters-img"></div>
+
         <div class="form-option">
             <div class="courier-info">
                 <p>0kg - 5kg <br> 40 X 40 X 40 Centimeters</p>
@@ -86,64 +87,46 @@
                 </p>
             </div>
         </div>
+    </div>
+
+
+    <div class="form-courier-options">
+        <input type="radio" id="radioBikes or Scooters" name="courier-option-radio"
+        value="Bikes or Scooters" required checked="checked" />
+        <label for="radioBikes">
+
+            <div class="courier-icon">
+                <img src="./../../img/bike.svg" alt="Bikes or Scooters-img">
+            </div>
+
+            <div class="courier-info">
+                <div class="courier-name">
+                    <h5>Bikes or Scooters</h5>
+                </div>
+                <div class="courier-details">
+                    <h6>
+                        0kg - 5kg
+                    </h6>
+                    <h6>
+                        40 X 40 X 40 Centimeters
+                    </h6>
+                    <h6>
+                        Cheapest and most sustainable delivery option: earn points every time you use sustainable delivery.
+                    </h6>
+                </div>
+            </div>
+
+        </label>
+
     </div> -->
 
 
-    <div class="user-type">
-        <input type="radio" id="driver-no" name="driver" value="no" required checked="checked" />
-        <label for="driver-no">
+<div class="datetimepicker">
+	<input type="date" id="date" value="2018-07-03">
+	<span></span>
+	<input type="time" id="time" value="08:00">
+</div>
 
-            <div class="courier-icon">
-                <img src="./../../img/bike.svg" alt="Bikes or Scooters-img">
-            </div>
-
-
-            <div class="panel-content">
-                <div class="panel-heading">
-                    <h5>Bikes or Scooters</h5>
-                </div>
-                <div class="panel-body">
-                    <h6>
-                        0kg - 5kg
-                    </h6>
-                    <h6>
-                        40 X 40 X 40 Centimeters
-                    </h6>
-                    <h6>
-                        Cheapest and most sustainable delivery option: earn points every time you use sustainable delivery.
-                    </h6>
-                </div>
-            </div>
-
-        </label>
-
-        <input type="radio" id="driver-yes" name="driver" value="yes" required>
-        <label for="driver-yes">
-
-            <div class="courier-icon">
-                <img src="./../../img/bike.svg" alt="Bikes or Scooters-img">
-            </div>
-
-
-            <div class="panel-content">
-                <div class="panel-heading">
-                    <h5>Bikes or Scooters</h5>
-                </div>
-                <div class="panel-body">
-                    <h6>
-                        0kg - 5kg
-                    </h6>
-                    <h6>
-                        40 X 40 X 40 Centimeters
-                    </h6>
-                    <h6>
-                        Cheapest and most sustainable delivery option: earn points every time you use sustainable delivery.
-                    </h6>
-                </div>
-            </div>
-
-        </label>
-    </div>
 
 </body>
 
