--- a/css/templates/header.css
+++ b/css/templates/header.css
@@ -136,7 +136,7 @@ nav.menu-mobile a:visited,
 /* ========================= */
 
 
-input[type="radio"] {
+/* input[type="radio"] {
     display: none;
 }
 
@@ -187,4 +187,61 @@ input[type="radio"]:checked+label {
     display: flex;
     flex-flow: column nowrap;
     gap: .3rem;
+} */
+
+
+
+
+
+/* ====================== */
+
+
+.datetimepicker {
+	display: inline-flex;
+	align-items: center;
+	background-color: #fff;
+	border: 4px solid darkturquoise;
+	border-radius: 8px;
+	
+	&:focus-within {
+		border-color: teal;
+	}
+	
+	input {
+		font: inherit;
+		color: inherit;
+		appearance: none;
+		outline: none;
+		border: 0;
+		background-color: transparent;
+		
+		&[type=date] {
+			width: 10rem;
+			padding: .25rem 0 .25rem .5rem;
+			border-right-width: 0;
+		}
+		
+		&[type=time] {
+			width: 5.5rem;
+			padding: .25rem .5rem .25rem 0;
+			border-left-width: 0;
+		}
+	}
+	
+	span {
+		height: 1rem;
+		margin-right: .25rem;
+		margin-left: .25rem;
+		border-right: 1px solid #ddd;
+	}
+}
+
+.info {
+	padding-top: .5rem;
+	font-size: .8rem;
+	color: rgba(255, 255, 255, .5);
+}
+
+input {
+    border: none;
 }
