--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -1,30 +1,3 @@
-/*map*/
-#googleMap {
-    width: 100%;
-    /* height: auto; */
-    height: 100vh;
-}
-
-body {
-    height: 100vh;
-}
-
-
-.map {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-}
-
-iframe {
-    display: block;
-    background: #000;
-    border: none;
-    height: 100vh;
-}
-
 
 .form-destination div input {
     width: 100%;
@@ -35,11 +8,11 @@ iframe {
     margin-bottom: .5rem;
 }
 
-.form-destination .form-food {
+.form-destination .form-destination-search {
     margin: 0 1rem;
 }
 
-.form-food:nth-child(1) {
+.form-destination-search:nth-child(1) {
     border-bottom: 1px solid #c4c4c4;
 }
 
@@ -52,97 +25,8 @@ iframe {
     padding: .2rem;
 }
 
-.main-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    overflow: hidden;
-}
 
-.form-fillup {
-    padding: 1rem;
-    height: 100vh;
-
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 2rem;
-    overflow: scroll;
-}
-
-h2 {
-    margin: 0;
-}
-
-
-.form-courier-options a {
-    color: var(--color-contrast-dark);
-}
-
-.form-courier-options h3 {
-    margin: 0;
-}
-
-.form-courier-options p {
-    font-size: .8rem;
-    margin: 0;
-}
-
-.form-courier-options p:nth-child(2) {
-    font-size: .5rem;
-    margin: 0;
-}
-
-.courier-info {
-    display: flex;
-    flex-flow: column wrap;
-    gap: .2rem;
-}
-
-.form-option {
-    display: flex;
-    flex-flow: column wrap;
-    gap: .5rem;
-
-    flex-grow: 1;
-}
-
-.form-courier-options {
-    margin-top: 1rem;
-
-    display: flex;
-    flex-flow: column wrap;
-    gap: 1rem;
-}
-
-.options {
-    padding: 0.5rem 1rem;
-    border-radius: 20px;
-    border: 1px solid #c4c4c4;
-    filter: grayscale(1);
-    opacity: 80%;
-}
-
-.courier-icon img {
-    width: 100px;
-}
-
-.options a {
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-}
-
-.options:hover {
-    filter: grayscale(0);
-    background-color: rgb(239, 239, 239);
-    border: 2px solid var(--color-contrast-dark);
-    opacity: 100%;
-}
-
-.options:hover a {
-    color: var(--color-contrast-dark);
-}
-
-
+/* ========== Button ========== */
 .submit {
     /* margin-top: 1rem; */
     border-radius: var(--border-radius);
@@ -164,36 +48,85 @@ h2 {
 }
 
 
-.request-div {
-    border: 1px solid black;
-    border-radius: 30px;
-    width: 500px;
-    text-align: center;
+
+/* ============== Courier Option ================= */
+
+.courier-icon img {
+    width: 100px;
 }
 
 
-#comments{
+input[type="radio"] {
+    display: none;
+}
+
+label img {
+    max-height: 100px;
+}
+
+label.courier-label {
+    position: relative;
+    color: var(--color-contrast-dark);
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    gap: 1rem;
+    border: 1px solid var(--color-contrast-light);
+    padding: .5em;
+    border-radius: var(--border-radius);
     width: 100%;
+    padding: 1rem;
 }
 
 
+input[type="radio"]:checked+label {
+    box-shadow: 0px 0px 0px 2px var(--color-contrast-dark);
+}
 
-/* ============================ */
+
+.courier-info {
+    padding: 1rem;
+    display: flex;
+    flex-flow: column;
+    gap: .25rem;
+}
+
+.courier-details {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: .25rem;
+}
+
+
+/* ============= DropOff and Date ============== */
+
+label h4 {
+    display: block;
+    margin-bottom: .5rem; 
+}
+
 
 input.datetime {
     border: 1px solid var(--color-contrast-dark);
     border-radius: 8px;
     padding: .5rem;
-    margin-top: .5rem;
-}
-/*  */
-
-.drop-off > label {
-    display: block;
-    margin-bottom: .5rem; 
 }
 
 .drop-off-box {
     padding: .5rem;
     border-radius: 8px;
+}
+
+
+
+
+/* ========================== */
+
+input:focus {
+    border-color: var(--color-primary);
+}
+
+
+textarea {
+    padding: 1rem;
 }
