--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -97,12 +97,17 @@ input[type="radio"]:checked+label {
     gap: .25rem;
 }
 
+#courier-option {
+    display: grid;
+    gap: 1rem;
+}
+
 
 /* ============= DropOff and Date ============== */
 
 label h4 {
     display: block;
-    margin-bottom: .5rem; 
+    margin-bottom: 1rem; 
 }
 
 
@@ -127,6 +132,7 @@ input.datetime {
     gap: 1rem;
 }
 
+
 input:focus {
     border-color: var(--color-primary);
 }
@@ -134,4 +140,5 @@ input:focus {
 
 textarea {
     padding: 1rem;
+    width: 100%;
 }
