--- a/css/templates/gridlayout.css
+++ b/css/templates/gridlayout.css
@@ -6,13 +6,23 @@
 .main-content {
     padding: 1rem;
 
+    border-top: 1px solid var(--color-contrast-grey);
+    box-shadow: 0px 0px 5px 0px var(--color-contrast-grey);
 
     display: flex;
     flex-flow: column nowrap;
     gap: 2rem;
+    order: 2;
+
+    z-index: 1;
 }
 
-/* @media screen and (min-width: 600px) {
+.map {
+    min-height: 300px;
+    order: 1;
+}
+
+@media screen and (min-width: 800px) {
     .content-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -22,10 +32,20 @@
     .main-content {
         padding: 1rem;
 
+        border-top: none;
+        border-right: 1px solid var(--color-contrast-grey);
+        box-shadow: 0px 0px 5px 0px var(--color-contrast-grey);
 
         display: flex;
         flex-flow: column nowrap;
         gap: 2rem;
         overflow: scroll;
+        order: 1;
+
+        z-index: 1;
     }
-} */
+
+    .map {
+        order: 2;
+    }
+}
