--- a/css/delivery_request_seeker/delivery_request_driver.css
+++ b/css/delivery_request_seeker/delivery_request_driver.css
@@ -1,11 +1,30 @@
+.availability-switch-position {
+    position: fixed;
+    top: 100px;
+    right: 2rem;
+    z-index: 2;
 
-.switch{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+
+    background-color: var(--color-contrast-white);
+    padding: 1rem;
+    border-radius: var(--border-radius);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.739);
+
+}
+
+.availability-switch-position p {
+    margin: 0;
+}
+
+.availabilitySwitch{
 	position: relative;
 	width: 60px;
 	height: 34px;
-	margin: 20px auto;
 }
-.switch input[type=checkbox]{
+.availabilitySwitch input[type=checkbox]{
 	position: absolute;
 	-moz-opacity: 0;
 	-khtml-opacity: 0;
@@ -14,8 +33,8 @@
 	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 	filter: alpha(opacity=0);
 }
-.switch label,
-.switch label span{
+.availabilitySwitch label,
+.availabilitySwitch label span{
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -23,12 +42,12 @@
 	bottom: 0;
 	transition-duration: .2s;
 }
-.switch label{
+.availabilitySwitch label{
 	border-radius: 20px;
 	background-color: #ddd;
 }
-.switch label:before,
-.switch label:after{
+.availabilitySwitch label:before,
+.availabilitySwitch label:after{
 	position: absolute;
 	top: 0;
 	width: 34px;
@@ -36,7 +55,7 @@
 	color: #fff;
 	text-align: center;
 }
-.switch label span {
+.availabilitySwitch label span {
 	z-index: 1;
 	width: 28px;
 	height: 28px;
@@ -44,19 +63,19 @@
 	border-radius: 50%;
 	background-color: #fff;
 }
-.switch label:before {
+.availabilitySwitch label:before {
 	left: 0;
 	font-size: 11px;
 	content: 'ON';
 }
-.switch label:after {
+.availabilitySwitch label:after {
 	right: 0;
 	font-size: 10px;
 	content: 'OFF';
 }
-.switch input:checked+label {
+.availabilitySwitch input:checked+label {
 	background-color: #00c73c;
 }
-.switch input:checked+label span {
+.availabilitySwitch input:checked+label span {
 	transform: translateX(26px);
 }
