--- a/css/delivery_request_seeker/delivery_request_driver.css
+++ b/css/delivery_request_seeker/delivery_request_driver.css
@@ -1,30 +1,33 @@
+/* =================== Switch =========== */
+
 .availability-switch-position {
-    position: fixed;
-    top: 100px;
-    right: 2rem;
-    z-index: 2;
+	position: fixed;
+	top: 100px;
+	right: 2rem;
+	z-index: 2;
 
-    display: flex;
-    align-items: center;
-    gap: 2rem;
+	display: flex;
+	align-items: center;
+	gap: 2rem;
 
-    background-color: var(--color-contrast-white);
-    padding: 1rem;
-    border-radius: var(--border-radius);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.739);
+	background-color: var(--color-contrast-white);
+	padding: 1rem;
+	border-radius: var(--border-radius);
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.739);
 
 }
 
 .availability-switch-position p {
-    margin: 0;
+	margin: 0;
 }
 
-.availabilitySwitch{
+.availabilitySwitch {
 	position: relative;
 	width: 60px;
 	height: 34px;
 }
-.availabilitySwitch input[type=checkbox]{
+
+.availabilitySwitch input[type=checkbox] {
 	position: absolute;
 	-moz-opacity: 0;
 	-khtml-opacity: 0;
@@ -33,8 +36,9 @@
 	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 	filter: alpha(opacity=0);
 }
+
 .availabilitySwitch label,
-.availabilitySwitch label span{
+.availabilitySwitch label span {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -42,12 +46,14 @@
 	bottom: 0;
 	transition-duration: .2s;
 }
-.availabilitySwitch label{
+
+.availabilitySwitch label {
 	border-radius: 20px;
 	background-color: #ddd;
 }
+
 .availabilitySwitch label:before,
-.availabilitySwitch label:after{
+.availabilitySwitch label:after {
 	position: absolute;
 	top: 0;
 	width: 34px;
@@ -55,6 +61,7 @@
 	color: #fff;
 	text-align: center;
 }
+
 .availabilitySwitch label span {
 	z-index: 1;
 	width: 28px;
@@ -63,19 +70,45 @@
 	border-radius: 50%;
 	background-color: #fff;
 }
+
 .availabilitySwitch label:before {
 	left: 0;
 	font-size: 11px;
 	content: 'ON';
 }
+
 .availabilitySwitch label:after {
 	right: 0;
 	font-size: 10px;
 	content: 'OFF';
 }
+
 .availabilitySwitch input:checked+label {
-	background-color: #00c73c;
+	background-color: var(--color-primary);
 }
+
 .availabilitySwitch input:checked+label span {
 	transform: translateX(26px);
+}
+
+
+/* ============= Cards ============= */
+
+.request-div {
+	padding: 1rem;
+	border: 1px solid black;
+}
+
+.change-request {
+	padding: 0;
+}
+
+.change-request {
+	display: flex;
+	gap: 1rem;
+}
+
+.change-request li {
+	text-decoration: none;
+	list-style: none;
 }
