--- a/css/history/history.css
+++ b/css/history/history.css
@@ -13,73 +13,201 @@ body {
     background-color: #eeeeee;
 }
 
-header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    padding: .5rem 1rem;
-    background-color: #06a367;
-    z-index: 1;
-
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-}
-
-.map {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-}
-
-nav li a {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.481);
-    padding: 1rem;
-    font-size: .9rem;
-}
-
-nav ul li:nth-child(1) a {
-    color: white;
-}
-
-nav ul {
-    padding: 0;
-    list-style: none;
-    display: flex;
-}
-
-.logo img {
-    max-height: 30px;
-}
-
 
 .top-links ul {
     display: flex;
     gap: 3rem;
 }
 
-ul{
+ul {
     list-style-type: none;
     padding-left: 0;
 }
+#showHistoryDiv{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+}
+#showHistoryDiv ul{
+    width:95vw;
+    text-align: center;
+}
 
-#showHistoryDiv h2,#showHistoryDiv p{
+#showHistoryDiv h2,
+#showHistoryDiv p {
     display: inline;
 }
 
-#showHistoryDiv li{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    column-gap: 2rem;
-}
+/* #showHistoryDiv ul:first-child {
+    display: none;
+} */
 
-#showHistoryDiv li:not(#showHistoryDiv ul li:first-of-type){
+
+/* #showHistoryDiv li:not(#showHistoryDiv ul li:first-of-type){
     border: 1px solid black;
+} */
+
+#showHistoryDiv li:not(#showHistoryDiv ul li:first-of-type):hover {
+    cursor: pointer;
 }
 
-#showHistoryDiv li:not(#showHistoryDiv ul li:first-of-type):hover{
-   cursor: pointer;
+.favio_listStyle {
+    text-align: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 16px 16px 16px 16px;
+}
+
+.favio_historyListUl {
+    display: grid;
+    gap: 1rem;
+    margin:1rem;
+
+}
+
+.favio_listStyle p:first-child {
+    grid-column: 1/3;
+    text-align: center;
+
+}
+
+.favio_listStyle p:nth-child(2) {
+grid-column: 3/4;
+align-self: flex-start;
+grid-row: 1/2;
+
+}
+
+.favio_listStyle p:nth-child(3) {
+    order: 3;
+    align-self: flex-end;
+    grid-column: 1/4;
+}
+
+.favio_listStyle p:nth-child(4) {
+    order: 2;
+    grid-column: 3/4;
+grid-row: 1/2;
+}
+
+.favio_listStyle p:nth-child(5) {
+    order: 4;
+
+}
+
+.favio_listStyle p:nth-child(6) {
+    order: 6;
+}
+
+.favio_listStyle p:nth-child(7) {
+    order: 7;
+}
+
+
+/* .favio_historyDesktopHeader{
+    display: none;
+} */
+.favio_listStyle {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1.5fr 1fr 1fr;
+
+    gap: 1rem;
+}
+
+a {
+    color: var(--color-contrast-dark);
+    text-decoration: none;
+}
+
+.favio_historyStatus {
+    padding: .5rem;
+    border: 1px solid;
+    border-radius: 50px 50px 50px 50px;
+    background-color: var(--color-primary);
+    color: var(--color-contrast-white);
+    white-space: nowrap;
+
+}
+.favioHeaderli{
+    display: none;
+}
+
+.favio_distance {
+    padding: .5rem;
+    border: 1px solid;
+    border-radius: 8px 8px 8px 8px;
+    background-color: var(--color-contrast-grey);
+    color: var(--color-contrast-white);
+    white-space: nowrap;
+}
+
+@media only screen and (min-width: 800px) {
+   
+
+    #showHistoryDiv{
+
+        display: grid;
+    }
+
+    .favioHeaderli {
+       display: grid;
+       grid-template-columns: repeat(7,1fr);
+       align-items: center;
+text-align: center; 
+      gap:4rem;
+    }
+
+    .favio_historyDesktopHeader {
+        display: block;
+    }
+    .favio_listStyle {
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: 1fr;
+    }
+
+    .favio_listStyle p:first-child {
+        order:1;
+        grid-column: 1/2;
+        text-align: center;
+    
+    }
+    
+    .favio_listStyle p:nth-child(2) {
+        order: 2;
+        grid-column: 2/3;
+        align-self: center;    
+    }
+    
+    .favio_listStyle p:nth-child(3) {
+        order: 3;
+        grid-column: 3/4;
+
+    }
+    
+    .favio_listStyle p:nth-child(4) {
+        order: 4;
+        grid-column: 4/5;
+        align-self: center;
+    }
+    
+    .favio_listStyle p:nth-child(5) {
+       grid-column: 5/6;
+    
+    }
+    
+    .favio_listStyle p:nth-child(6) {
+       grid-column: 6/7;
+    }
+    
+    .favio_listStyle p:nth-child(7) {
+       grid-column: 7/7;
+    }
+    .favio_historyFromTO {
+        display: flex;
+        flex-flow: column;
+        text-align: left;
+    }
+
+
 }
