--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --typography-size-body: 1rem;
     --typography-size-small: 0.8rem;
     --typography-size-smallest: 0.64rem;
+    --typography-size-button: 14px;
 
 
     /* Colors */
