--- a/css/delivery_request_seeker/delivery_inprogress_rider.css
+++ b/css/delivery_request_seeker/delivery_inprogress_rider.css
@@ -1,227 +1,49 @@
-/*map*/
-#googleMap {
-    width: 100%;
-    /* height: auto; */
-    height: 80vh;
-    margin: 10px auto;
-  }
-
-  * {
-    box-sizing: border-box;
-}
-
-body {
-    height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    line-height: 1.5;
-    background-color: #eeeeee;
-}
-
-header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    padding: .5rem 1rem;
-    background-color: #06a367;
-    z-index: 1;
-
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-}
-
-.map {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-}
-
-iframe {
-    display: block;
-    background: #000;
-    border: none;
-    height: 100vh;
-}
-
-nav li a {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.481);
-    padding: 1rem;
-    font-size: .9rem;
-}
-
-nav ul li:nth-child(1) a {
-    color: white;
-}
-
-nav ul {
-    padding: 0;
-    list-style: none;
-    display: flex;
-}
-
-.logo img {
-    max-height: 30px;
-}
-
-
 
 .form-destination div input {
     width: 100%;
-    padding: 1.3rem 1rem;
+    padding: 1rem;
     border: none;
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: var(--border-radius);
+    margin-bottom: .5rem;
 }
 
-.form-destination .form-food {
+.form-destination .form-destination-search {
     margin: 0 1rem;
 }
 
-.form-food:nth-child(1) {
+.form-destination-search:nth-child(1) {
     border-bottom: 1px solid #c4c4c4;
 }
 
 .form-destination>div {
     margin-top: 1rem;
     background-color: white;
-    border: 1px solid #c4c4c4;
-    border-radius: 20px;
+    border: 1px solid var(--color-contrast-light);
+    border-radius: var(--border-radius);
     overflow: hidden;
-    padding: 1rem .5;
-}
-
-.main-content {
-    display: flex;
-}
-
-.form-fillup {
-    width: 50%;
-    padding: 1rem;
-
-    display: flex;
-    flex-flow: column wrap;
-    gap: 2rem;
-}
-
-h2 {
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-.form-courier-options a {
-    color: #222222;
-}
-
-.form-courier-options h3 {
-    margin: 0;
-}
-
-.form-courier-options p {
-    font-size: .8rem;
-    margin: 0;
-}
-
-.form-courier-options p:nth-child(2) {
-    font-size: .5rem;
-    margin: 0;
-}
-
-.courier-info {
-    display: flex;
-    flex-flow: column wrap;
-    gap: .2rem;
-}
-
-.form-option {
-    display: flex;
-    flex-flow: column wrap;
-    gap: .5rem;
-
-    flex-grow: 1;
-}
-
-.form-courier-options {
-    margin-top: 1rem;
-
-    display: flex;
-    flex-flow: column wrap;
-    gap: 1rem;
-}
-
-.options{
-    padding: 0.5rem 1rem;
-    border-radius: 20px;
-    border: 1px solid #c4c4c4;
-    filter: grayscale(1);
-    opacity: 80%;
-}
-
-.courier-icon img{
-    width: 100px;
-}
-
-.options a{
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-}
-
-.options:hover{
-    filter: grayscale(0);
-    background-color: rgb(239, 239, 239);
-    border: 2px solid #222222;
-    opacity: 100%;
-}
-
-.options:hover a{
-    color: #222222;
+    padding: .2rem;
 }
 
 
-button {
+/* ========== Button ========== */
+.submit {
     /* margin-top: 1rem; */
-    border-radius: 8px;
+    border-radius: var(--border-radius);
     font-weight: bold;
     padding: 1rem;
-    background-color: #222222;
+    background-color: var(--color-contrast-dark);
     border: none;
     color: white;
-    width: 100%;
-    margin-bottom: 2rem;
-}
-
-button[disabled] {
-    /* margin-top: 1rem; */
-    border-radius: 8px;
-    font-weight: bold;
-    padding: 1rem;
-    background-color: white;
-    border: none;
-    color: rgba(0,0,0,.2);
     width: 100%;
 }
 
 .button-confirmation {
-    /* position: fixed; */
-    bottom: 0;
-    left: 0;
-    width: 50%;
     padding: 2rem;
     background-color: white;
     border-top: 1px solid #c4c4c4;
 }
-  
 
-.request-div{
-    border: 1px solid black;
-    border-radius: 30px;
-    width: 500px;
-    text-align: center;
-}
+
+
+/* ================================ */
