--- a/css/delivery_request_seeker/delivery_request_driver.css
+++ b/css/delivery_request_seeker/delivery_request_driver.css
@@ -101,6 +101,7 @@
 
 	display: grid;
 	gap: 1rem;
+
 }
 
 .request-div p {
@@ -119,7 +120,7 @@
 
 .request-div-right{
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row wrap;
 	gap: 1rem;
 	justify-content: end;
 	align-items: center;
