--- a/css/history/history.css
+++ b/css/history/history.css
@@ -211,3 +211,95 @@ text-align: center;
 
 
 }
+
+
+/* ============= Dialog ============= */
+#modal {
+	border-radius: var(--border-radius);
+	max-width: 560px;
+}
+
+.dialogContent {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.dialogContent p:first-of-type {
+	font-size: var(--typography-size-title);
+	font-weight: bold;
+	flex-basis: 100%;
+	text-align: center;
+}
+
+.dialog-head {
+	font-size: var(--typography-size-title);
+	font-weight: bold;
+	flex-basis: 100%;
+	text-align: center;
+}
+
+.dialog-img,
+.dialog-title,
+.dialog-detail {
+	flex-basis: 100%;
+}
+
+.dialog-title {
+	font-size: var(--typography-size-body);
+	font-weight: bold;
+	margin-bottom: 0;
+}
+
+p.dialog-title:nth-of-type(8),
+p.dialog-detail:nth-of-type(9),
+p.dialog-detail:nth-of-type(10) {
+   display: none;
+}
+
+.dialog-date,
+.dialog-time {
+	font-size: var(--typography-size-subtitle);
+	font-weight: bold;
+}
+
+.dialog-distance {
+	background: var(--color-contrast-grey);
+	color: var(--color-contrast-white);
+	border-radius: var(--border-radius);
+	padding: .5rem 1rem;
+}
+
+.dialog-price {
+	font-size: var(--typography-size-subtitle);
+	font-weight: bold;
+}
+
+
+/* BUTTON============= */
+button.dialogOpen {
+	border-radius: var(--border-radius);
+  font-weight: bold;
+  padding: 1rem;
+	margin-bottom: 1rem;
+  background-color: var(--color-secondary);
+  border: 1px solid var(--color-secondary);
+  color: var(--color-contrast-dark);
+	width: calc(50% - .5rem);
+}
+
+button.dialogClose {
+	border-radius: var(--border-radius);
+  font-weight: bold;
+  padding: 1rem;
+	margin-bottom: 1rem;
+  background-color: var(--color-contrast-white);
+  border: 1px solid var(--color-secondary);
+  color: var(--color-contrast-dark);
+	width: calc(50% - .5rem);
+}
+
+button.dialogOpen + button.dialogClose {
+	margin-left: 1rem;
+}
