--- a/css/registration/login.css
+++ b/css/registration/login.css
@@ -14,17 +14,32 @@ img {
 
 .wrapper {
     display: flex;
+    flex-direction: column;
 }
+
 
 .login-banner {
     background: linear-gradient(to left, #07B875, #016740);
     background-image: url(./../../img/BG.png);
     background-size: cover;
-    width: 60%;
-    height: 100vh;
+    width: 100%;
+    height: 30vh;
     display: flex;
     align-items: center;
 }
+
+@media screen and (min-width: 1000px) {
+    .wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .login-banner {
+        width: 60%;
+        height: 100vh;
+    }
+  }
+
 
 .site-logo {
     max-width: 30%;
@@ -161,6 +176,7 @@ h1 {
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .flex-form {
