--- a/css/templates/header.css
+++ b/css/templates/header.css
@@ -18,18 +18,14 @@ header {
 
 .menu-main li a {
     text-decoration: none;
-    color: var(--color-contrast-light);
+    color: var(--color-contrast-white);
     padding: 1rem;
     font-size: .9rem;
 }
 
-.menu-main li a:hover {
-
-    color: var(--color-contrast-white);
-    transition: 1s;
+.menu-main ul li:nth-child(1) a {
+    color: white;
 }
-
-
 
 .menu-main ul {
     padding: 0;
@@ -55,7 +51,7 @@ nav.menu-mobile {
     left: 0;
     top: 3rem;
     bottom: 0;
-    z-index: 10000;
+    z-index: 1;
 
     display: grid;
     align-items: center;
