refactored price code in inprogress_seeker.js and added active in html navbar

--- a/pages/templates/header.html
+++ b/pages/templates/header.html
@@ -37,7 +37,7 @@
 
                 <li>
                     <a href="./../history/history.html">
-                        <span class="visually-hidden-text">History</span>
+                        <span class=" active visually-hidden-text">History</span>
                     </a>
                 </li>
 
