--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -1,3 +1,7 @@
+.favio_AboutUsArrow {
+    margin: 1rem 0 0 4%;
+  }
+
 .favio_settingsMainDiv{
     display: flex;
     flex-flow: column nowrap;
@@ -7,6 +11,8 @@
 
 .favio_settingsMainDiv ul{
     width:60vw;
+    padding: 0;
+    margin-top: 3rem;
 }
 .favio_settingsMainDiv li {
     list-style: none;
@@ -14,12 +20,23 @@
     justify-content: space-between;
     border-bottom: 1px solid black;
     padding:1rem;
-    
+    align-items: center;
 
 }
 a{
     text-decoration: none;
 }
+
+.favio_settingsMainDiv li div {
+    display: flex;
+    gap: 1rem;
+}
+
+img[alt*="icon"] {
+    width: 24px;
+    height: 24px;
+}
+
 
 @media only screen and (min-width: 600px) {
     .fa-solid fa-arrow-right{
