Back arrow styling and adding images on signup and about us

--- a/css/history/history.css
+++ b/css/history/history.css
@@ -13,6 +13,13 @@ body {
     background-color: #eeeeee;
 }
 
+.favio_AboutUsArrow {
+    margin: 1rem 0 0 4%;
+  }
+
+.top-links {
+    margin: 1rem 0 0 4%;
+}
 
 .top-links ul {
     display: flex;
