--- a/css/settings/aboutUs.css
+++ b/css/settings/aboutUs.css
@@ -11,6 +11,10 @@
     
 }
 
+.favio_AboutUsArrow {
+    margin: 1rem 0 0 4%;
+}
+
 .favio_aboutUs_header{
     display: flex;
     flex-flow: column nowrap;
@@ -32,27 +36,47 @@ main img{
 max-width: 20%;
     height:auto;
 }
+
 .favio_aboutUsMainDiv{
     display:  flex;
     flex-flow: column nowrap;
     gap:1rem;
     justify-content: center;
     align-items: center;
-   
+   margin-bottom: 3rem;
     
+}
+
+.favio_aboutUsMainDiv h2 {
+    margin-bottom: 1rem;
 }
 
 .favio_AboutUsGrid{
     display: grid;
     width:80%;
     gap:1rem;
+    align-items: center;
 }
 
+.favio_aboutUs_image img {
+    display: block;
+    max-width: max-content;
+    max-height: max-content;
+}
 
 
 @media only screen and (min-width:600px ) {
     .favio_AboutUsGrid{
         grid-template-columns: 1fr 1fr;
 
+    }
+    .favio_aboutUs_image {
+        clip: unset;
+        clip-path: unset;
+        height: unset;
+        overflow: unset;
+        position: unset;
+        white-space: unset;
+        width: unset;
     }
 }
