polish register page and add styling

--- a/css/registration/signup.css
+++ b/css/registration/signup.css
@@ -139,6 +139,10 @@ body {
   }
 }
 
-.output{
-  
+#loadimgbtn label{
+  width: 90px; 
+  height: 90px; 
+  background-color: #dedbdb;
+  border-radius: 50%;
 }
+
