Autofetch Request and others bug solved

--- a/css/delivery_request_seeker/delivery_request_driver.css
+++ b/css/delivery_request_seeker/delivery_request_driver.css
@@ -276,6 +276,10 @@ button.dialogConfirm + button.dialogClose {
 	border-radius: 50%;
 }
 
+.active-link{
+    border-bottom: 2px solid black; 
+}
+
 
 
 
