--- a/css/history/history.css
+++ b/css/history/history.css
@@ -310,3 +310,7 @@ button.dialogClose {
 button.dialogOpen + button.dialogClose {
 	margin-left: 1rem;
 }
+
+.active-link{
+    border-bottom: 2px solid black; 
+}
