Adjust margin of headings and set hover on card close #41 #42

--- a/css/history/history.css
+++ b/css/history/history.css
@@ -58,6 +58,10 @@ ul {
     cursor: pointer;
 }
 
+.favio_historyListUl li:hover {
+    box-shadow: 0px 0px 0px 2px var(--color-contrast-dark)
+}
+
 .favio_listStyle {
     text-align: center;
     align-items: center;
