Set width for photoproof seeker

--- a/css/delivery_request_seeker/delivery_inprogress_seeker.css
+++ b/css/delivery_request_seeker/delivery_inprogress_seeker.css
@@ -195,3 +195,7 @@ button.dialogClose + button.dialogConfirmNow {
 .pt ul li span.active::before{
    background: #07B875;
 }
+
+img#completedImage{
+    max-width: 500px;
+}
