Seeker - Make action button always appear at the bottom

--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -1,4 +1,3 @@
-
 .form-destination div input {
     width: 100%;
     padding: 1rem;
@@ -23,28 +22,6 @@
     border-radius: var(--border-radius);
     overflow: hidden;
     padding: .2rem;
-}
-
-
-/* ========== Button ========== */
-.submit {
-    /* margin-top: 1rem; */
-    border-radius: var(--border-radius);
-    font-weight: bold;
-    padding: 1rem;
-    background-color: var(--color-contrast-dark);
-    border: none;
-    color: white;
-    width: 100%;
-}
-
-.button-confirmation {
-    /* position: fixed; */
-    bottom: 0;
-    left: 0;
-    padding: 2rem;
-    background-color: white;
-    border-top: 1px solid #c4c4c4;
 }
 
 
@@ -107,7 +84,7 @@ input[type="radio"]:checked+label {
 
 label h4 {
     display: block;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
 }
 
 
@@ -146,26 +123,26 @@ textarea {
 
 /* ============= Dialog ============= */
 #modal {
-	border-radius: var(--border-radius);
-	max-width: 560px;
+    border-radius: var(--border-radius);
+    max-width: 560px;
 }
 
 .dialogContent {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .dialogContent p {
-	font-size: var(--typography-size-subtitle);
-	font-weight: bold;
-	flex-basis: 100%;
-	text-align: center;
+    font-size: var(--typography-size-subtitle);
+    font-weight: bold;
+    flex-basis: 100%;
+    text-align: center;
 }
 
 .dialog-img {
-	flex-basis: 100%;
+    flex-basis: 100%;
 }
 
 
@@ -174,51 +151,113 @@ button.dialogConfirm {
     border-radius: var(--border-radius);
     font-weight: bold;
     padding: 1rem;
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
     background-color: var(--color-secondary);
     border: 1px solid var(--color-secondary);
     color: var(--color-contrast-dark);
-	width: calc(50% - .5rem);
+    width: calc(50% - .5rem);
 }
 
 button.dialogClose {
-	border-radius: var(--border-radius);
+    border-radius: var(--border-radius);
     font-weight: bold;
     padding: 1rem;
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
     background-color: var(--color-contrast-white);
     border: 1px solid var(--color-secondary);
     color: var(--color-contrast-dark);
-	width: calc(50% - .5rem);
+    width: calc(50% - .5rem);
 }
 
-button.dialogConfirm + button.dialogClose {
-	margin-left: 1rem;
+button.dialogConfirm+button.dialogClose {
+    margin-left: 1rem;
 }
 
 
 /* loader */
 
-.loader{
-	display:none;
+.loader {
+    display: none;
 }
 
-.show-loader .loader{
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.739);
-	height: 100%;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index:10;
-  }
-
-  .profile-pic{
-	height: 100px;
-	width: 100px;
-	border-radius: 50%;
+.show-loader .loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.739);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
 }
 
+.profile-pic {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
+
+
+/* ========== Button ========== */
+
+.main-content {
+    position: relative;
+    padding-bottom: 8rem;
+}
+
+.submit {
+    /* margin-top: 1rem; */
+    border-radius: var(--border-radius);
+    font-weight: bold;
+    padding: 1rem;
+    background-color: var(--color-contrast-dark);
+    border: none;
+    color: white;
+    width: 100%;
+}
+
+.button-confirmation {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 2rem;
+    background-color: white;
+    border-top: 1px solid #c4c4c4;
+    border-right: 1px solid var(--color-contrast-grey);
+    background-color: var(--color-contrast-white);
+    z-index: 3;
+}
+
+
+@media screen and (min-width: 800px) {
+
+    .main-content {
+        position: relative;
+        padding-bottom: 8rem;
+    }
+
+    .submit {
+        /* margin-top: 1rem; */
+        border-radius: var(--border-radius);
+        font-weight: bold;
+        padding: 1rem;
+        background-color: var(--color-contrast-dark);
+        border: none;
+        color: white;
+        width: 100%;
+    }
+
+    .button-confirmation {
+        position: fixed;
+        bottom: 0;
+        width: 50%;
+        padding: 2rem;
+        background-color: white;
+        border-top: 1px solid #c4c4c4;
+        border-right: 1px solid var(--color-contrast-grey);
+        background-color: var(--color-contrast-white);
+        z-index: 3;
+    }
+}
