--- a/css/templates/gridlayout.css
+++ b/css/templates/gridlayout.css
@@ -30,7 +30,7 @@
     }
 
     .main-content {
-        padding: 1rem;
+        padding: 1rem 1rem 0 1rem;
 
         border-top: none;
         border-right: 1px solid var(--color-contrast-grey);
@@ -39,7 +39,7 @@
         display: flex;
         flex-flow: column nowrap;
         gap: 2rem;
-        overflow: scroll;
+        overflow-y: auto;
         order: 1;
 
         z-index: 1;
