--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -228,6 +228,9 @@ button.dialogConfirm+button.dialogClose {
     border-right: 1px solid var(--color-contrast-grey);
     background-color: var(--color-contrast-white);
     z-index: 3;
+
+    box-shadow: 0px 0px 3px #2222221d;
+
 }
 
 
